--- a/app/src/main/res/layout/cita.xml
+++ b/app/src/main/res/layout/cita.xml
@@ -21,6 +21,9 @@
         android:text="Buscar cita"
         android:layout_below="@+id/datePicker"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        tools:ignore="HardcodedText" />
+
+
 
 </RelativeLayout>
