--- a/app/src/main/res/layout/medicos.xml
+++ b/app/src/main/res/layout/medicos.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/editTextMedicos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
@@ -21,33 +21,34 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/editText2"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="11dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginStart="15dp"
         android:text="Identificación usuario:"
-        tools:ignore="HardcodedText" />
+        tools:ignore="HardcodedText"
+        android:layout_alignBaseline="@+id/editTextMedicos"
+        android:layout_alignBottom="@+id/editTextMedicos"
+        android:layout_toLeftOf="@+id/editTextMedicos"
+        android:layout_toStartOf="@+id/editTextMedicos"
+        android:layout_marginRight="15dp"
+        android:layout_marginEnd="15dp" />
 
     <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="47dp"
         android:text="Buscar Medico"
-        android:layout_below="@+id/editText2"
-        android:layout_centerHorizontal="true"
-        tools:ignore="HardcodedText" />
+        tools:ignore="HardcodedText"
+        android:layout_marginTop="42dp"
+        android:layout_below="@+id/editTextMedicos"
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:id="@+id/txtMedicos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/editText2"
-        android:layout_alignStart="@+id/editText2"
+        android:layout_marginTop="63dp"
+        android:text="TextView"
+        tools:ignore="HardcodedText"
         android:layout_below="@+id/button2"
-        android:layout_marginTop="74dp"
-        android:text="TextView" />
+        android:layout_alignLeft="@+id/editTextMedicos"
+        android:layout_alignStart="@+id/editTextMedicos" />
 
 </RelativeLayout>
