--- a/app/src/main/res/layout/nav_header_navigation_drawer.xml
+++ b/app/src/main/res/layout/nav_header_navigation_drawer.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
     android:background="@drawable/side_nav_bar"
@@ -18,22 +17,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@android:drawable/sym_def_app_icon"
-        tools:ignore="ContentDescription" />
+        app:srcCompat="@android:drawable/sym_def_app_icon" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="Paciente SantaFe"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        tools:ignore="HardcodedText" />
+        android:text="Android Studio"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Aplicación paciente"
-        tools:ignore="HardcodedText" />
+        android:text="android.studio@android.com" />
 
 </LinearLayout>
